# rectangular-shift

./: .gitignore  LICENSE  Lib.hs  default.nix  rectangular-shift.cabal  test.el
.github/workflows/: test.yml
nix/: sources.json
